--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -1,5 +1,12 @@
+<div class="social">
+    <div class="w-container icons">
+      <img class="social-icon" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/524663fda44337bb6300004a_icon_twitter.png" alt="524663fda44337bb6300004a_icon_twitter.png">
+      <img class="social-icon" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/524663e097f46fb9630000f4_icon_face.png" alt="524663e097f46fb9630000f4_icon_face.png">
+      <img class="social-icon" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/524663d697f46fb9630000f2_icon_rss.png" alt="524663d697f46fb9630000f2_icon_rss.png">
+    </div>
+  </div>
 <h1 id='logo'>
-  <%= link_to Refinery::Core.site_name, refinery.root_path %>
+  <%= link_to image_tag("logo.png", :border => 0, :size => "202x50"), {:action=>"home", :alt=>"Platensa", :title=>"Platensa"} %>
 </h1>
 <%= render(:partial => "/refinery/menu", :locals => {
              :dom_id => 'menu',
