permitir nuevas page parts en el modulo de administracion y estiloscon html en el homepage

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,1 +1,94 @@
+<div class="section" id="page-nav-services">
+  <div class="section" id="page-nav-top">
+    <div class="w-container">
+      <div class="w-row topmenu">
+        <div class="w-col w-col-3 w-clearfix logo-bar">
+          <img class="company-logo" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/5240509f5181e20957000146_logo.png" width="164" alt="5240509f5181e20957000146_logo.png">
+        </div>
+        <div class="w-col w-col-9 nav-bar topi"><a class="nav-links" href="#page-nav-services" target="_self">Presentación</a>
+          <div class="separador">|</div><a class="nav-links" href="#page-nav-portfolio" target="_self">Productos</a>
+          <div class="separador">|</div><a class="nav-links" href="#page-nav-about" target="_self">Asesoría Técnica</a>
+          <div class="separador">|</div><a class="nav-links" href="#page-nav-about" target="_self">Blog</a>
+          <div class="separador">|</div><a class="nav-links" href="#page-nav-contact" target="_self">Contáctenos</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="header">
+    <div class="w-container hero-text"></div>
+  </div>
+  <div class="trisection">
+    <div class="w-container service-columns">
+      <div class="w-row">
+        <div class="w-col w-col-4 tricol">
+          <div class="w-clearfix triblock">
+            <h1>PRESENTACIÓN</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo
+              cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p><a class="button" href="#">MÁS INFORMACIÓN</a>
+          </div>
+        </div>
+        <div class="w-col w-col-4 tricol">
+          <div class="w-clearfix triblock">
+            <h1>PRODUCTOS</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo
+              cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p><a class="button" href="#">MÁS INFORMACIÓN</a>
+          </div>
+        </div>
+        <div class="w-col w-col-4 tricol">
+          <div class="w-clearfix triblock">
+            <h1>PRESENTACIÓN</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo
+              cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p><a class="button" href="#">MÁS INFORMACIÓN</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="section dark web" id="page-nav-portfolio">
+  <div class="w-container">
+    <div class="w-row">
+      <div class="w-col w-col-3">
+        <div class="destacar">
+          <div class="textoblanco"><strong>Paneltim</strong>
+            <br>cambia
+            <br>tu manera
+            <br>de trabajar</div>
+        </div>
+      </div>
+      <div class="w-col w-col-9 portfolio-text">
+        <div class="w-clearfix botondestacado">
+          <h4>Producto Destacado</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo
+            cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p><a class="button" href="#">MÁS INFORMACIÓN</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="section marcas">
+  <div class="w-container">
+    <div class="w-container">
+      <h2>Nuestras Marcas...</h2>
+    </div>
+    <div class="w-container">
+      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/5246715197f46fb96300011d_proteus.png" alt="5246715197f46fb96300011d_proteus.png">
+      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/5246715c97f46fb96300011e_paneltim.png" alt="5246715c97f46fb96300011e_paneltim.png">
+      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/52467181a44337bb6300006f_3p.png" alt="52467181a44337bb6300006f_3p.png">
+      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/52467168a44337bb6300006e_brabante.png" alt="52467168a44337bb6300006e_brabante.png">
+      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/5246718aa44337bb63000070_taconic.png" alt="5246718aa44337bb63000070_taconic.png">
+      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/52467132a44337bb6300006d_quadrant.png" alt="52467132a44337bb6300006d_quadrant.png">
+      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/5246719297f46fb963000121_tivar.png" alt="5246719297f46fb963000121_tivar.png">
+    </div>
+  </div>
+</div>
+<div class="section dark pier">
+  <div class="piesblock">
+    <div class="w-container"></div><a class="w-inline-block pieces" href="#"><a class="nav-bar" href="#page-nav-services" target="_self">PRESENTACIÓN</a><a class="nav-bar" href="#page-nav-services" target="_self">PRODUCTOS</a><a class="nav-bar" href="#page-nav-services" target="_self">ASESORÍA TÉCNICA</a>
+    <a
+    class="nav-bar" href="#page-nav-services" target="_self">BLOG</a><a class="nav-bar last" href="#page-nav-services" target="_self">CONTÁCTENOS</a></a>
+  </div>
+  <div class="textologopie"><strong>PLATENSA - Plásticos Técnicos Nijs S.A. | Av. Benavides 2035 - Miraflores | Telf: (00511) 273 4730</strong>
+  </div>
+</div>
 <%= render '/refinery/content_page' %>
