Menu superior correspondiente con modulo de administracion

--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -1,4 +1,9 @@
-<p>
-  <%= t('.copyright', :year => Time.now.year,
-                      :site_name => Refinery::Core.site_name) %>
-</p>
+<div class="section dark pier">
+  <div class="piesblock">
+    <div class="w-container"></div><a class="w-inline-block pieces" href="#"><a class="nav-bar" href="#page-nav-services" target="_self">PRESENTACIÓN</a><a class="nav-bar" href="#page-nav-services" target="_self">PRODUCTOS</a><a class="nav-bar" href="#page-nav-services" target="_self">ASESORÍA TÉCNICA</a>
+    <a
+    class="nav-bar" href="#page-nav-services" target="_self">BLOG</a><a class="nav-bar last" href="#page-nav-services" target="_self">CONTÁCTENOS</a></a>
+  </div>
+  <div class="textologopie"><strong>PLATENSA - Plásticos Técnicos Nijs S.A. | Av. Benavides 2035 - Miraflores | Telf: (00511) 273 4730</strong>
+  </div>
+</div>
