--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -5,10 +5,22 @@
       <img class="social-icon" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/524663d697f46fb9630000f2_icon_rss.png" alt="524663d697f46fb9630000f2_icon_rss.png">
     </div>
   </div>
+<div class="section" id="page-nav-services">
+  <div class="section" id="page-nav-top">
+    <div class="w-container">
+      <div class="w-row topmenu">
+        <div class="w-col w-col-3 w-clearfix logo-bar">
 <h1 id='logo'>
   <%= link_to image_tag("logo.png", :border => 0, :size => "202x50"), {:action=>"home", :alt=>"Platensa", :title=>"Platensa"} %>
 </h1>
+</div>
+<div class="w-col w-col-9 nav-bar topi">
 <%= render(:partial => "/refinery/menu", :locals => {
              :dom_id => 'menu',
              :css => 'menu'
            }) %>
+	       </div>
+       </div>
+     </div>
+   </div>
+ </div>
