Menu inferior correspondiente con modulo de administracion

--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -1,8 +1,10 @@
 <div class="section dark pier">
   <div class="piesblock">
-    <div class="w-container"></div><a class="w-inline-block pieces" href="#"><a class="nav-bar" href="#page-nav-services" target="_self">PRESENTACIÓN</a><a class="nav-bar" href="#page-nav-services" target="_self">PRODUCTOS</a><a class="nav-bar" href="#page-nav-services" target="_self">ASESORÍA TÉCNICA</a>
-    <a
-    class="nav-bar" href="#page-nav-services" target="_self">BLOG</a><a class="nav-bar last" href="#page-nav-services" target="_self">CONTÁCTENOS</a></a>
+    <div class="w-container"></div>
+	<%= render(:partial => "/refinery/menu", :locals => {
+	             :dom_id => 'menu',
+	             :css => 'menu'
+	           }) %>
   </div>
   <div class="textologopie"><strong>PLATENSA - Plásticos Técnicos Nijs S.A. | Av. Benavides 2035 - Miraflores | Telf: (00511) 273 4730</strong>
   </div>
