poniendo logos de Nuestras Marcas en modo local

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -69,13 +69,13 @@
       <h2>Nuestras Marcas...</h2>
     </div>
     <div class="w-container">
-      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/5246715197f46fb96300011d_proteus.png" alt="5246715197f46fb96300011d_proteus.png">
-      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/5246715c97f46fb96300011e_paneltim.png" alt="5246715c97f46fb96300011e_paneltim.png">
-      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/52467181a44337bb6300006f_3p.png" alt="52467181a44337bb6300006f_3p.png">
-      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/52467168a44337bb6300006e_brabante.png" alt="52467168a44337bb6300006e_brabante.png">
-      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/5246718aa44337bb63000070_taconic.png" alt="5246718aa44337bb63000070_taconic.png">
-      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/52467132a44337bb6300006d_quadrant.png" alt="52467132a44337bb6300006d_quadrant.png">
-      <img class="marca" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/5246719297f46fb963000121_tivar.png" alt="5246719297f46fb963000121_tivar.png">
+      <img class="marca" src="assets/proteus.png">
+      <img class="marca" src="assets/paneltim.png">
+      <img class="marca" src="assets/3p.png">
+      <img class="marca" src="assets/brabante.png">
+      <img class="marca" src="assets/taconic.png">
+      <img class="marca" src="assets/quadrant.png">
+      <img class="marca" src="assets/tivar.png">
     </div>
   </div>
 </div>
