poniendo link a los iconos sociales facebook, twitter, rss

--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -1,8 +1,8 @@
 <div class="social">
     <div class="w-container icons">
-      <img class="social-icon" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/524663fda44337bb6300004a_icon_twitter.png" alt="524663fda44337bb6300004a_icon_twitter.png">
-      <img class="social-icon" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/524663e097f46fb9630000f4_icon_face.png" alt="524663e097f46fb9630000f4_icon_face.png">
-      <img class="social-icon" src="https://y7v4p6k4.ssl.hwcdn.net/52404d082431920857000119/524663d697f46fb9630000f2_icon_rss.png" alt="524663d697f46fb9630000f2_icon_rss.png">
+      <%= link_to image_tag("icon_twitter.png", { :class => "social-icon" } ), "http://www.twitter.com" %>
+	  <%= link_to image_tag("icon_face.png", { :class => "social-icon" } ), "http://www.facebook.com" %>
+	  <%= link_to image_tag("icon_rss.png", { :class => "social-icon" } ), "http://www.rss.com" %>
     </div>
   </div>
 <div class="section" id="page-nav-services">
