--- a/app/views/refinery/_menu_branch.html.erb
+++ b/app/views/refinery/_menu_branch.html.erb
@@ -4,7 +4,7 @@
   end
 -%>
 <%= link_to(menu_branch.title, refinery.url_for(menu_branch.url), :class => "nav-links") -%>
-<div class="separador">|</div>
+<div class="separador <%= classes.join(' ') %>">|</div>
   <% if ( (children = menu_branch.children unless hide_children).present? &&
           (!local_assigns[:menu_levels] || menu_branch.ancestors.length < local_assigns[:menu_levels]) ) -%>
 
