--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -11,7 +11,7 @@
       <div class="w-row topmenu">
         <div class="w-col w-col-3 w-clearfix logo-bar">
 <h1 id='logo'>
-  <%= link_to image_tag("logo.png", :border => 0, :size => "202x50"), {:action=>"home", :alt=>"Platensa", :title=>"Platensa"} %>
+  <%= link_to image_tag("logo.png", :border => 0, :size => "202x50"), {:action=>"/", :alt=>"Platensa", :title=>"Platensa"} %>
 </h1>
 </div>
 <div class="w-col w-col-9 nav-bar topi">
