--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,6 +1,6 @@
   <div class="header">
     <div class="w-container hero-text">
-	    <% main_slideshow = Refinery::ImageSlideshows::ImageSlideshow.find_by_title('primer slide') %>
+	    <% main_slideshow = Refinery::ImageSlideshows::ImageSlideshow.find_by_title('slide') %>
 	    <div id="wrapper">
 	      <div class="slider-wrapper theme-default">
 	        <div id="slider" class="nivoSlider">
