--- a/app/views/refinery/_head.html.erb
+++ b/app/views/refinery/_head.html.erb
@@ -15,6 +15,7 @@
   <%= render '/refinery/google_analytics' %>
 
   <%= javascript_include_tag 'modernizr-min' %>
-  <%= javascript_include_tag 'jquery' %>
-  <%= javascript_include_tag 'jquery.nivo.slider' %>
+  <%= javascript_include_tag 'application' %>
+  <%= #javascript_include_tag 'jquery' %>
+  <%= #javascript_include_tag 'jquery.nivo.slider' %>
 </head>
