Creacion de la seccion Productos

--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -1,1 +1,81 @@
-<%= render '/refinery/content_page' %>
+  <div class="header">
+    <div class="w-container hero-text">
+	    <% main_slideshow = Refinery::ImageSlideshows::ImageSlideshow.find_by_title('primer slide') %>
+	    <div id="wrapper">
+	      <div class="slider-wrapper theme-default">
+	        <div id="slider" class="nivoSlider">
+	          <% main_slideshow.image_slides.each do |image_slide| %>
+	            <%= link_to image_slide.link_url do %>
+	              <%= image_tag image_slide.image.url, :alt => image_slide.title, :title => image_slide.caption %>
+	            <% end %>
+	          <% end %>
+	        </div>
+	      </div>
+	    </div>
+	    <script type="text/javascript">
+	      $(document).ready(function() {
+	          $('#slider').nivoSlider({
+	            <%= raw main_slideshow.js_config %>
+	          });
+	      });
+	    </script>
+    </div>
+  </div>
+  <div class="trisection">
+    <div class="w-container service-columns">
+      <div class="w-row">
+        <div class="w-col w-col-4 tricol">
+          <div class="w-clearfix triblock">
+            <%= raw @page.content_for(:columna1) %>
+          </div>
+        </div>
+        <div class="w-col w-col-4 tricol">
+          <div class="w-clearfix triblock">
+            <%= raw @page.content_for(:columna2) %>
+          </div>
+        </div>
+        <div class="w-col w-col-4 tricol">
+          <div class="w-clearfix triblock">
+            <%= raw @page.content_for(:columna3) %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="section dark web" id="page-nav-portfolio">
+  <div class="w-container">
+    <div class="w-row">
+      <div class="w-col w-col-3">
+        <div class="destacar">
+          <div class="textoblanco">
+          	<%= raw @page.content_for(:destacar) %>
+          </div>
+        </div>
+      </div>
+      <div class="w-col w-col-9 portfolio-text" style="background-image: url(<% @page.images.each do |image| %>
+	        <%= image.url %>
+	   <% end %>)">
+        <div class="w-clearfix botondestacado">
+          <%= raw @page.content_for(:body) %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="section marcas">
+  <div class="w-container">
+    <div class="w-container">
+      <h2>Nuestras Marcas...</h2>
+    </div>
+    <div class="w-container">
+      <img class="marca" src="assets/proteus.png">
+      <img class="marca" src="assets/paneltim.png">
+      <img class="marca" src="assets/3p.png">
+      <img class="marca" src="assets/brabante.png">
+      <img class="marca" src="assets/taconic.png">
+      <img class="marca" src="assets/quadrant.png">
+      <img class="marca" src="assets/tivar.png">
+    </div>
+  </div>
+</div>
