Galeria implementada para Paginas internas

--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -1,3 +1,5 @@
+<%= render "/refinery/photo_gallery/albums/show" %>
+
   <div class="header">
     <div class="w-container hero-text">
 	    <% main_slideshow = Refinery::ImageSlideshows::ImageSlideshow.find_by_title('primer slide') %>
