--- a/app/views/refinery/productos/productos/index.html.erb
+++ b/app/views/refinery/productos/productos/index.html.erb
@@ -1,3 +1,26 @@
+  <div class="header">
+    <div class="w-container hero-text">
+	    <% main_slideshow = Refinery::ImageSlideshows::ImageSlideshow.find_by_title('primer slide') %>
+	    <div id="wrapper">
+	      <div class="slider-wrapper theme-default">
+	        <div id="slider" class="nivoSlider">
+	          <% main_slideshow.image_slides.each do |image_slide| %>
+	            <%= link_to image_slide.link_url do %>
+	              <%= image_tag image_slide.image.url, :alt => image_slide.title, :title => image_slide.caption %>
+	            <% end %>
+	          <% end %>
+	        </div>
+	      </div>
+	    </div>
+	    <script type="text/javascript">
+	      $(document).ready(function() {
+	          $('#slider').nivoSlider({
+	            <%= raw main_slideshow.js_config %>
+	          });
+	      });
+	    </script>
+    </div>
+  </div>
   <div class="trisection">
     <div class="w-container service-columns">
       <div class="w-row">
@@ -46,7 +69,13 @@
       <h2>Nuestras Marcas...</h2>
     </div>
     <div class="w-container">
-      <%= render "/refinery/photo_gallery/albums/show" %>
+      <img class="marca" src="assets/proteus.png">
+      <img class="marca" src="assets/paneltim.png">
+      <img class="marca" src="assets/3p.png">
+      <img class="marca" src="assets/brabante.png">
+      <img class="marca" src="assets/taconic.png">
+      <img class="marca" src="assets/quadrant.png">
+      <img class="marca" src="assets/tivar.png">
     </div>
   </div>
 </div>
