Menu principal en un div al 100%

--- a/app/views/refinery/_menu.html.erb
+++ b/app/views/refinery/_menu.html.erb
@@ -6,7 +6,7 @@
     css = [(css || 'menu clearfix')].flatten.join(' ')
     hide_children = Refinery::Core.menu_hide_children if hide_children.nil?
 -%>
-<div class="w-col w-col-9 nav-bar topi">
+<div class="w-col w-col-9 nav-bar topi" style="width: 100%">
     <%= render :partial => '/refinery/menu_branch', :collection => roots,
                :locals => {
                  :hide_children => hide_children,
