--- a/app/views/refinery/inquiries/inquiries/new.html.erb
+++ b/app/views/refinery/inquiries/inquiries/new.html.erb
@@ -1,8 +1,10 @@
 <div class="trisection">
   <div class="w-container service-columns">
     <div class="w-row">
-      <div class="w-col w-col-12 tricol">
+      <div class="w-col w-col-6 tricol">
         <div class="w-clearfix triblock">
+	<h2>Formulario de contacto</h2>
+	<p>Puede ponerse en contacto con nosotros llenando el siguiente formulario:</p>
 <% content_for :body_content_left do %>
   <div class='inquiries'>
     <%= form_for [refinery, :inquiries, @inquiry] do |f| %>
@@ -33,10 +35,21 @@
       </div>
       <div class="actions">
         <%= f.submit t('.send') %>
-        <%= link_to t('.privacy_policy'), "/pages/privacy-policy", :id => "privacy_link" if Refinery::Inquiries.show_contact_privacy_link %>
+        <%= link_to t('.privacy_policy'), "/pages/privacy-policy", :class => "telefono", :style => "color:black", :id => "privacy_link" if Refinery::Inquiries.show_contact_privacy_link %>
       </div>
     <% end %>
   </div>
 <% end %>
 <%= render :partial => "/refinery/content_page" %>
-</div></div></div></div></div>
+</div></div>
+  <div class="w-col w-col-6 tricol">
+    <div class="w-clearfix triblock">
+	<h2>Oficina</h2>
+	<p>Av. Benavides 2035 - Miraflores, teléfono (00511) 273 4730</p>
+	<%= image_tag "http://maps.googleapis.com/maps/api/staticmap?center=Av+Benavides+2035,Miraflores,LIMA,PE&zoom=16&size=420x220&maptype=roadmap&sensor=false", :class => 'mapita', :alt => 'Miraflores' %>
+	<h2>Talleres</h2>
+	<p>Calle Talara 165 - San Juan de Miraflores</p>
+	<%= image_tag "http://maps.googleapis.com/maps/api/staticmap?center=Calle+Talara+165,San+Juan+de+Miraflores,LIMA,PE&zoom=16&size=420x220&maptype=roadmap&sensor=false", :class => 'mapita', :alt => 'Miraflores' %>
+	</div>	
+</div>
+    </div></div></div>
