--- a/app/assets/stylesheets/platensaweb.webflow.css
+++ b/app/assets/stylesheets/platensaweb.webflow.css
@@ -2,35 +2,25 @@ body {
   margin-bottom: 0px;
   border-bottom-style: solid;
   border-bottom-color: rgba(0, 0, 0, 0);
-  background-color: #3a5676;
-  font-family: Lato, sans-serif;
+  background-color: #235577;
+  font-family: futura-ptl, sans-serif;
   color: #777;
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
 }
 h1 {
-  margin-right: 0px;
-  margin-left: 0px;
-  border: 0px solid black;
-  box-shadow: none;
-  -webkit-transition: all 500ms linear;
-  -o-transition: all 500ms linear;
-  transition: all 500ms linear;
-  font-family: futura-ptl, sans-serif;
-  color: #5f8fc4;
-  font-size: 22px;
-  line-height: 46px;
-  font-style: normal;
-  font-weight: 100;
+  margin: 10px 0px;
+  font-family: futura-ptl, Geneva, sans-serif;
+  color: #545454;
+  font-size: 16px;
   text-align: left;
-  letter-spacing: 1px;
-  text-transform: none;
-  text-shadow: rgba(0, 0, 0, 0.24) 0px 1px 0px;
+  letter-spacing: 0px;
+  text-transform: uppercase;
+  text-shadow: none;
 }
 h2 {
-  margin-right: 0px;
-  margin-left: 0px;
+  padding: 15px 18px 21px;
   border: 0px solid black;
   box-shadow: none;
   -webkit-transition: all 500ms linear;
@@ -64,7 +54,9 @@ h4 {
   margin: 10px 0px -10px;
   padding-top: 9px;
   padding-left: 41px;
+  clear: both;
   background-image: url(/assets/icoselect.png);
+  background-position: 0px 50%;
   background-repeat: no-repeat no-repeat;
   font-family: futura-ptl, sans-serif;
   color: #5e8fc4;
@@ -90,8 +82,12 @@ h6 {
 p {
   width: auto;
   margin-bottom: 5px;
+  padding-right: 18px;
+  padding-left: 18px;
+  float: left;
   background-image: none;
   font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #747473;
   font-size: 11px;
   text-align: left;
 }
@@ -104,7 +100,7 @@ p {
   float: right;
   border: 1px solid #92a0b7;
   border-radius: 5px;
-  background-color: #3a5676;
+  background-color: #225476;
   background-image: none;
   -webkit-transition: all 500ms ease;
   -o-transition: all 500ms ease;
@@ -119,7 +115,7 @@ p {
   text-transform: uppercase;
 }
 .button:hover {
-  background-color: #5f8fc4;
+  background-color: #1d68b8;
   background-image: none;
   -webkit-transition: none;
   -o-transition: none;
@@ -148,10 +144,13 @@ p {
 }
 .button.prodestacado {
   float: left;
+  -webkit-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+  transition: all 500ms ease;
 }
 .section.header {
   padding-top: 0px;
-  background-image: url();
+  background-image: url(/assets/heroman.jpg);
   background-position: 50% 50%;
   background-size: cover;
   background-attachment: fixed;
@@ -189,8 +188,7 @@ p {
   padding-bottom: 0px;
   border-bottom: 0px none #d0d1d1;
   background-color: #000536;
-  background-image: url(../images/fondo_gris.png), url(../images/example-bg.png);
-  background-size: auto, 125px;
+  background-image: none;
   -webkit-transition: all 500ms ease;
   -o-transition: all 500ms ease;
   transition: all 500ms ease;
@@ -198,7 +196,7 @@ p {
 .section.bg-image {
   padding-top: 125px;
   padding-bottom: 125px;
-  background-image: url();
+  background-image: url(/assets/wall.jpg);
   background-size: cover;
   background-attachment: fixed;
 }
@@ -219,7 +217,7 @@ p {
   background-color: white;
 }
 .nav-separador {
-  margin: 18px 2px 10px;
+  margin: 25px 2px 10px;
   padding: 5px 1px;
   float: right;
   box-shadow: none;
@@ -240,9 +238,10 @@ p {
   display:none;
 }
 .nav-links {
-  margin: 18px 5px 10px;
+  margin: 26px 5px 10px;
   padding: 5px 19px;
   float: right;
+  border-radius: 6px;
   box-shadow: none;
   -webkit-transition: all 500ms ease;
   -o-transition: all 500ms ease;
@@ -258,7 +257,6 @@ p {
   text-shadow: rgba(0, 0, 0, 0.24) 0px 1px 0px;
 }
 .nav-links:hover {
-	
   padding-top: 5px;
   padding-bottom: 5px;
   border-width: 0px;
@@ -269,7 +267,7 @@ p {
   border-left-style: solid;
   border-left-color: black;
   border-radius: 6px;
-  background-color: #3a5676;
+  background-color: #235577;
   background-image: none;
   box-shadow: none;
   -webkit-transform: none;
@@ -284,6 +282,9 @@ p {
 }
 .nav-links:active {
   background-image: none;
+  -webkit-transition: none;
+  -o-transition: none;
+  transition: none;
 }
 .nav-links.last {
   border-right-width: 0px;
@@ -329,7 +330,7 @@ p {
   border-left: 1px solid #d8d8d8;
   font-family: futura-ptl, sans-serif;
   color: white;
-  font-size: 14px;
+  font-size: 11px;
   font-weight: 100;
   text-align: right;
   text-decoration: none;
@@ -349,7 +350,7 @@ p {
 .hero-text {
   height: 340px;
   padding-top: 0px;
-  background-image: url();
+  background-image: url(/assets/carrusel_paneltim.jpg);
   background-position: 50% 50%;
   background-size: 940px;
   background-repeat: no-repeat no-repeat;
@@ -373,7 +374,8 @@ p {
 }
 .portfolio-text {
   height: 347px;
-  background-image: url(../images/destacado.png);
+  padding-left: 0px;
+  background-image: url(/assets/destacado.png);
   background-position: 100% 100%;
   background-repeat: no-repeat no-repeat;
 }
@@ -515,6 +517,9 @@ p {
   margin-right: 0px;
 }
 .company-logo {
+  padding-top: 9px;
+  padding-right: 0px;
+  padding-left: 8px;
   float: left;
 }
 .gallery-img {
@@ -533,7 +538,7 @@ p {
   padding-bottom: 0px;
 }
 .header {
-  background-image: url(../images/slider_platensa.png);
+  background-image: url(/assets/slider_platensa.png);
   background-position: 50% 50%;
   background-repeat: no-repeat no-repeat;
 }
@@ -563,14 +568,18 @@ p {
 }
 .destacar {
   display: block;
-  height: 178px;
-  margin-top: 51px;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 21px auto 0px;
+  padding-right: 0px;
+  padding-bottom: 21px;
+  float: left;
   border: 0px solid black;
-  background-color: #b2a956;
+  background-color: #428fc6;
+  color: white;
   line-height: 24px;
   text-align: center;
+}
+.destacar.grafi {
+  width: 350px;
 }
 .destaca {
   padding-right: 22px;
@@ -587,22 +596,10 @@ p {
   padding-left: 0px;
   text-align: center;
 }
-.piecentrado {
-  margin-top: 0px;
-  background-color: #3a5676;
-  background-image: none;
-  direction: ltr;
-  font-family: futura-ptl, sans-serif;
-  color: white;
-  font-size: 14px;
-  font-weight: 100;
-  text-align: center;
-  text-transform: none;			
-}
 .textologopie {
   margin-top: 0px;
   padding-top: 42px;
-  background-color: #3a5676;
+  background-color: rgba(0, 0, 0, 0);
   background-image: none;
   direction: ltr;
   font-family: futura-ptl, sans-serif;
@@ -611,7 +608,6 @@ p {
   font-weight: 100;
   text-align: center;
   text-transform: none;
-  border-bottom: 9px solid #9BAABA;
 }
 .logopie {
   display: block;
@@ -667,13 +663,17 @@ p {
 }
 .triblock {
   margin: 10px 9px;
-  padding: 9px 13px;
+  padding: 1px 1px 9px;
   border: 1px solid #c7cddb;
   border-radius: 7px;
   background-color: #efefef;
   box-shadow: none;
 }
+.triblock:hover {
+  color: white;
+}
 .tricol {
+  height: 100%;
   padding-right: 3px;
   padding-left: 3px;
 }
@@ -686,16 +686,19 @@ p {
 .botondestacado {
   width: 380px;
   margin-top: 36px;
-  padding-left: 38px;
 }
 .trisection {
   margin-top: 24px;
   margin-bottom: 20px;
 }
 .textoblanco {
-  padding-top: 35px;
+  position: static;
+  display: block;
+  overflow: visible;
+  padding-top: 17px;
   padding-right: 16px;
   padding-left: 28px;
+  clear: none;
   color: white;
   font-size: 20px;
   line-height: 26px;
@@ -728,7 +731,7 @@ p {
   display: block;
   margin-right: auto;
   margin-left: auto;
-  background-color: #3a5676;
+  background-color: rgba(0, 0, 0, 0);
   color: white;
 }
 .centrame {
@@ -744,7 +747,7 @@ p {
   text-align: right;
 }
 .destacados {
-  width: 210px;
+  width: 220px;
   font-family: futura-ptl, sans-serif;
   color: black;
   font-weight: 100;
@@ -759,10 +762,10 @@ p {
 }
 .cabeza {
   margin-top: 17px;
-  margin-bottom: 20px;
-  padding: 9px;
-  border-radius: 13px;
-  background-color: white;
+  margin-bottom: 17px;
+  padding: 1px 1px 9px;
+  border-radius: 6px;
+  background-color: #efefef;
 }
 .telefono {
   margin-right: 13px;
@@ -778,20 +781,27 @@ p {
   color: #f0f0f0;
 }
 .tpropiedades {
+  margin-left: 11px;
   padding-bottom: 9px;
+  padding-left: 0px;
   float: left;
-  clear: none;
-  color: #f03a3a;
-  font-weight: 700;
+  clear: both;
+  background-image: none;
+  font-family: futura-ptl, sans-serif;
+  color: #60a0cc;
+  font-size: 16px;
+  font-weight: 100;
   text-decoration: none;
   text-transform: none;
 }
 .ppropiedades {
   display: block;
+  margin-right: 34px;
+  margin-left: 34px;
   padding-left: 24px;
   float: left;
   clear: both;
-  background-image: url(../images/icoselect.png);
+  background-image: url(/assets/icoselect.png);
   background-size: 18px;
   background-repeat: no-repeat no-repeat;
   font-weight: 400;
@@ -803,28 +813,41 @@ p {
   padding-left: 26px;
   float: right;
   clear: none;
-  background-image: url(../images/icoselect.png);
+  background-image: url(/assets/icoselect.png);
 }
 .ertalon {
+  position: static;
+  display: block;
+  overflow: visible;
   margin-bottom: 18px;
+  padding: 1px 49px 1px 12px;
+  float: left;
+  clear: none;
+  border-top-left-radius: 6px;
+  border-bottom-right-radius: 5px;
+  background-color: #235577;
   -webkit-transition: all 500ms linear;
   -o-transition: all 500ms linear;
   transition: all 500ms linear;
-  color: #c45e8c;
-  font-size: 23px;
-  font-weight: 700;
+  color: white;
+  font-size: 17px;
+  line-height: 33px;
+  text-transform: uppercase;
   text-shadow: rgba(0, 0, 0, 0.24) 0px 1px 0px;
 }
 .quadrant {
-  margin-left: 21px;
-  padding-bottom: 12px;
-  float: right;
+  display: block;
+  margin: 22px auto;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  float: none;
+  clear: both;
 }
 .imagenquadrant {
   display: block;
-  margin-right: auto;
-  margin-bottom: 13px;
-  margin-left: auto;
+  margin: 43px auto;
+  padding: 2px;
+  border: 16px solid #bbb;
 }
 .galeria {
   display: block;
@@ -844,12 +867,29 @@ p {
 .otrosproductos {
   padding-bottom: 6px;
   padding-left: 44px;
-  margin-bottom: 12px;
   border-bottom: 1px solid #bfbfbf;
 }
 .otrosproductos.sinlinea {
   border-bottom-width: 0px;
   border-bottom-color: rgba(0, 0, 0, 0);
+}
+.paplicaciones {
+  padding-right: 20px;
+  padding-left: 20px;
+  font-family: futura-ptl, sans-serif;
+  color: #676767;
+}
+.graficas {
+  margin-top: 21px;
+  margin-bottom: 21px;
+  clear: both;
+}
+.esquinacuadro {
+  float: right;
+}
+.grafico {
+  width: 500px;
+  float: right;
 }
 @media (max-width: 991px) {
   h1 {
@@ -876,7 +916,7 @@ p {
   .section.header {
     position: static;
     padding-bottom: 171px;
-    background-image: url();
+    background-image: url(/assets/heroman.jpg);
     background-position: 50% -1%;
     background-attachment: scroll;
   }
@@ -885,9 +925,15 @@ p {
     -o-transition: all 500ms ease;
     transition: all 500ms ease;
   }
+  .section.dark.pier {
+    background-color: rgba(0, 0, 0, 0);
+    -webkit-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease;
+  }
   .section.bg-image {
     position: static;
-    background-image: url();
+    background-image: url(/assets/wall.jpg);
     background-position: 50% 50%;
     background-attachment: scroll;
   }
@@ -933,6 +979,12 @@ p {
   .topmenu {
     box-shadow: black 0px 0px 0px 0px;
   }
+  .textologopie {
+    background-color: rgba(0, 0, 0, 0);
+  }
+  .piesblock {
+    background-color: rgba(0, 0, 0, 0);
+  }
 }
 @media (max-width: 767px) {
   h1 {
@@ -941,6 +993,9 @@ p {
   }
   h2 {
     margin-bottom: 10px;
+    -webkit-transition: all 500ms linear;
+    -o-transition: all 500ms linear;
+    transition: all 500ms linear;
     font-size: 18px;
     text-shadow: black 0px 0px 0px;
   }
@@ -951,12 +1006,12 @@ p {
   }
   .section {
     margin-bottom: 0px;
-    padding-top: 43px;
-    padding-bottom: 43px;
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
   .section.header {
     padding-bottom: 99px;
-    background-image: url();
+    background-image: url(/assets/heroman.jpg);
     background-position: 50% 50%;
   }
   .section.dark {
@@ -965,7 +1020,7 @@ p {
     transition: all 500ms ease;
   }
   .section.bg-image {
-    background-image: url();
+    background-image: url(/assets/wall.jpg);
     background-repeat: no-repeat no-repeat;
     background-attachment: scroll;
   }
@@ -998,6 +1053,8 @@ p {
   .portfolio-text {
     padding-right: 20px;
     padding-left: 20px;
+    background-image: url(/assets/destacado.png);
+    background-position: 100% 100%;
   }
   .portfolio-text.left-up {
     margin-top: 0px;
@@ -1066,6 +1123,13 @@ p {
   .team-column {
     margin-bottom: 54px;
   }
+  .destacar {
+    width: 100%;
+  }
+  .textoblanco {
+    width: 100%;
+    min-height: 0px;
+  }
 }
 @media (max-width: 479px) {
   h1 {
@@ -1103,7 +1167,7 @@ p {
   }
   .section.header {
     padding-bottom: 51px;
-    background-image: url();
+    background-image: url(/assets/heroman.jpg);
     background-position: 50% 50%;
   }
   .section.dark {
@@ -1116,7 +1180,7 @@ p {
   .section.bg-image {
     padding-top: 30px;
     padding-bottom: 30px;
-    background-image: url();
+    background-image: url(/assets/wall.jpg);
   }
   .nav-links {
     position: static;
@@ -1156,6 +1220,7 @@ p {
   .portfolio-text {
     margin-top: 40px;
     padding-left: 22px;
+    background-image: none;
     text-align: center;
   }
   .portfolio-text.left-up {
