--- a/app/assets/stylesheets/platensaweb.webflow.css
+++ b/app/assets/stylesheets/platensaweb.webflow.css
@@ -10,14 +10,22 @@ body {
   font-weight: 400;
 }
 h1 {
-  margin: 10px 0px;
-  font-family: futura-ptl, Geneva, sans-serif;
-  color: #545454;
-  font-size: 16px;
+  padding: 15px 18px 21px;
+  border: 0px solid black;
+  box-shadow: none;
+  -webkit-transition: all 500ms linear;
+  -o-transition: all 500ms linear;
+  transition: all 500ms linear;
+  font-family: futura-ptl, sans-serif;
+  color: #5f8fc4;
+  font-size: 23px;
+  line-height: 36px;
+  font-style: normal;
+  font-weight: 100;
   text-align: left;
-  letter-spacing: 0px;
-  text-transform: uppercase;
-  text-shadow: none;
+  letter-spacing: 1px;
+  text-transform: none;
+  text-shadow: rgba(0, 0, 0, 0.24) 0px 1px 0px;
 }
 h2 {
   padding: 15px 18px 21px;
