--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -14,7 +14,7 @@
           <img class="company-logo" src="assets/logo.png"
           width="240" alt="Platensa"><%= render(:partial => "/refinery/menu", :locals => {
 		             :dom_id => 'menu',
-		             :css => 'nav-links'
+		             :css => 'navlist'
 		           }) %>
         </div>
      </div>
