--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,5 +13,6 @@
  *= require fancybox/jquery.fancybox
  *= require fancybox/helpers/jquery.fancybox-buttons
  *= require dark
+ *= require menu
  *= require_tree .
  */
