Estilos de paginas internas con columnas del mismo alto

--- a/app/assets/stylesheets/platensaweb.webflow.css
+++ b/app/assets/stylesheets/platensaweb.webflow.css
@@ -708,7 +708,7 @@ p {
   margin-top: 36px;
 }
 .trisection {
-  margin-top: 24px;
+  margin-top: 0px;
   margin-bottom: 20px;
 }
 .textoblanco {
@@ -1306,4 +1306,165 @@ left: -60px;
 background: white;
 width: 230px;
 z-index: 10000000;
+}
+
+img#producto {
+    float: left;
+    position: relative;
+    left: 25%;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	border: 8px solid #235577;
+	padding: 3px;
+  }
+
+table.center {
+    margin-left:auto; 
+    margin-right:auto;
+  }
+
+table#grupos { 
+    margin-left:auto; 
+    margin-right:auto;
+	background-color:#92bbdb;
+}
+
+.tablita {
+	margin:0px;padding:0px;
+	width:100%;
+	border:1px solid #ffffff;
+
+	-moz-border-radius-bottomleft:5px;
+	-webkit-border-bottom-left-radius:5px;
+	border-bottom-left-radius:5px;
+
+	-moz-border-radius-bottomright:5px;
+	-webkit-border-bottom-right-radius:5px;
+	border-bottom-right-radius:5px;
+
+	-moz-border-radius-topright:5px;
+	-webkit-border-top-right-radius:5px;
+	border-top-right-radius:5px;
+
+	-moz-border-radius-topleft:5px;
+	-webkit-border-top-left-radius:5px;
+	border-top-left-radius:5px;
+}.tablita table{
+    border-collapse: collapse;
+        border-spacing: 0;
+	width:100%;
+	height:100%;
+	margin:0px;padding:0px;
+}.tablita tr:last-child td:last-child {
+	-moz-border-radius-bottomright:5px;
+	-webkit-border-bottom-right-radius:5px;
+	border-bottom-right-radius:5px;
+}
+.tablita table tr:first-child td:first-child {
+	-moz-border-radius-topleft:5px;
+	-webkit-border-top-left-radius:5px;
+	border-top-left-radius:5px;
+}
+.tablita table tr:first-child td:last-child {
+	-moz-border-radius-topright:5px;
+	-webkit-border-top-right-radius:5px;
+	border-top-right-radius:5px;
+}.tablita tr:last-child td:first-child{
+	-moz-border-radius-bottomleft:5px;
+	-webkit-border-bottom-left-radius:5px;
+	border-bottom-left-radius:5px;
+}.tablita tr:hover td{
+
+}
+.tablita tr:nth-child(odd){ background-color:#92bbdb; }
+.tablita tr:nth-child(even)    { background-color:#ffffff; }.tablita td{
+	vertical-align:middle;
+
+
+	border:1px solid #ffffff;
+	border-width:0px 1px 1px 0px;
+	text-align:left;
+	padding:7px;
+	font-size:10px;
+	font-family:Arial;
+	font-weight:normal;
+	color:#000000;
+}.tablita tr:last-child td{
+	border-width:0px 1px 0px 0px;
+}.tablita tr td:last-child{
+	border-width:0px 0px 1px 0px;
+}.tablita tr:last-child td:last-child{
+	border-width:0px 0px 0px 0px;
+}
+.tablita tr:first-child td{
+		background:-o-linear-gradient(bottom, #235577 5%, #235577 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #235577), color-stop(1, #235577) );
+	background:-moz-linear-gradient( center top, #235577 5%, #235577 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#235577", endColorstr="#235577");	background: -o-linear-gradient(top,#235577,235577);
+
+	background-color:#235577;
+	border:0px solid #ffffff;
+	text-align:center;
+	border-width:0px 0px 1px 1px;
+	font-size:12px;
+	font-family:Arial;
+	font-weight:bold;
+	color:#ffffff;
+}
+.tablita tr:first-child:hover td{
+	background:-o-linear-gradient(bottom, #235577 5%, #235577 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #235577), color-stop(1, #235577) );
+	background:-moz-linear-gradient( center top, #235577 5%, #235577 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#235577", endColorstr="#235577");	background: -o-linear-gradient(top,#235577,235577);
+
+	background-color:#235577;
+}
+.tablita tr:first-child td:first-child{
+	border-width:0px 0px 1px 0px;
+}
+.tablita tr:first-child td:last-child{
+	border-width:0px 0px 1px 1px;
+}
+
+
+div.col-w {
+    position:relative;
+    float:left;
+    background-color: #000;
+    border: 8px solid #B2A68E;
+    padding: 10px;
+    -moz-border-radius: 8px;
+border-radius: 8px;
+    width:28%;
+}
+div.col-w div.col-w {
+    width: 100%;
+    margin-top:-18px;
+    margin-bottom:-18px;
+}
+div.col-w2 {
+    left:100%;
+    margin-left:23px;
+}
+
+div.col-w.col-b {
+    font-size: 0;
+    height: 8px;
+}
+
+div.col-w div.col-h {
+    position:relative;
+    float: left;
+    width:100%;
+    margin-right: -100%;
+}
+div.col-1 {
+    left:-200%;
+    margin-left:-83px;
+}
+div.col-2 {
+    left:-100%;
+    margin-left:-43px;
+}
+
+.header {
+	margin-bottom: 10px;
 }
