--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -11,7 +11,7 @@
   <div class="section" id="page-nav-top">
     <div class="w-container">
         <div class="w-clearfix cabeza">
-          <img class="company-logo" src="assets/logo.png"
+          <img class="company-logo" src="/assets/logo.png"
           width="240" alt="Platensa"><%= render(:partial => "/refinery/menu", :locals => {
 		             :dom_id => 'menu',
 		             :css => 'navlist'
