--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -1,22 +1,79 @@
 <div class="trisection">
   <div class="w-container service-columns">
     <div class="w-row">
+	<% if (@page.content_for(:superior))%>
       <div class="w-col w-col-12 tricol">
         <div class="w-clearfix triblock">
           <%= raw @page.content_for(:superior) %>
         </div>
       </div>
+	<% end %>
+	<% if (@page.content_for(:superior_izquierdo))%>
+	<div id="container">
+      <div class="w-col w-col-5 tricol">
+        <div class="w-clearfix triblock" id="left-col-superior-izquierdo">
+          <%= raw @page.content_for(:superior_izquierdo) %>
+        </div>
+      </div>
+	      <div class="w-col w-col-7 tricol">
+	        <div class="w-clearfix triblock" id="right-col-superior-derecho">
+	          <%= raw @page.content_for(:superior_derecho) %>
+	        </div>
+	      </div>
+	</div>
+	<% end %>
+	<% if (@page.content_for(:medio))%>
       <div class="w-col w-col-12 tricol">
         <div class="w-clearfix triblock">
           <%= raw @page.content_for(:medio) %>
         </div>
       </div>
+	<% end %>
+	<% if (@page.content_for(:medio_izquierdo))%>
+      <div class="w-col w-col-5 tricol">
+        <div class="w-clearfix triblock" id="left-col-medio-izquierdo">
+          <%= raw @page.content_for(:medio_izquierdo) %>
+        </div>
+      </div>
+	      <div class="w-col w-col-7 tricol">
+	        <div class="w-clearfix triblock" id="right-col-medio-derecho">
+	          <%= raw @page.content_for(:medio_derecho) %>
+	        </div>
+	      </div>
+	<% end %>
+	<% if (@page.content_for(:inferior))%>
       <div class="w-col w-col-12 tricol">
         <div class="w-clearfix triblock">
           <%= raw @page.content_for(:inferior) %>
         </div>
       </div>
+	<% end %>
+	<% if (@page.content_for(:inferior_izquierdo))%>
+      <div class="w-col w-col-5 tricol">
+        <div class="w-clearfix triblock" id="right-col-inferior-derecho">
+          <%= raw @page.content_for(:inferior_izquierdo) %>
+        </div>
+      </div>
+	      <div class="w-col w-col-7 tricol">
+	        <div class="w-clearfix triblock" id="right-col-inferior-derecho">
+	          <%= raw @page.content_for(:inferior_derecho) %>
+	        </div>
+	      </div>
+	<% end %>
     </div>
   </div>
 </div>
 </div>
+<script language="javascript" type="text/javascript">
+var maximo=Math.max($("#left-col-superior-izquierdo").height(),$("#right-col-superior-derecho").height())+10;
+$("#left-col-superior-izquierdo").height(maximo);
+$("#right-col-superior-derecho").height(maximo);
+
+var maximo=Math.max($("#left-col-medio-izquierdo").height(),$("#right-col-medio-derecho").height());
+$("#left-col-medio-izquierdo").height(maximo);
+$("#right-col-medio-derecho").height(maximo);
+
+var maximo=Math.max($("#left-col-inferior-izquierdo").height(),$("#right-col-inferior-derecho").height());
+$("#left-col-inferior-izquierdo").height(maximo);
+$("#right-col-inferior-derecho").height(maximo);
+</script>
